fixed imv typo in registration tmpl

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -74,7 +74,7 @@ $('document').ready(function(){
 
 <div id="container">
   <div id="aside-img-left">
-    <img src="img/registration.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
+    <img src="/img/registration.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
   </div>
 
   <div id="main-info-right" class="tone-box">
