--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -504,6 +504,7 @@ div.login input {
   padding: 2px 0 2px 18px;
   margin: 0.3em 1.5em;
   width: 12em;
+}
 
 #divChangePass { 
 	border:1px solid #000000;
