--- a/htdocs/fILL-public-accessible.1.1.css
+++ b/htdocs/fILL-public-accessible.1.1.css
@@ -513,14 +513,12 @@ div.login input {
 /*-------SEARCH RESULTS STYLES-----------------*/
 
 .details {
-	border: 1px solid #505050; border-radius: 10px; padding: 1em; background-color: #f8f8f8; margin-left: 5px;
+	border: 1px solid #505050; border-radius: 10px; padding: 1em; background-color: #f8f8f8; margin: 5px;
 }
 
 .secondary_info {
 	display: none; width: 100%; background-color: #f5f5f5; font-size: .8em; color: #505050;"
 }
-
-
 
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
