added margin to primary

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -513,6 +513,9 @@ div.login input {
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
+.primary {
+	margin-left: 1em;
+}
 
 .secondary_info {
 /*styles moved to fill_client-public.js*/
