--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -35,6 +35,7 @@ img
 {
 	height: auto;
 	max-width: 100%;
+	border-bottom: 3px solid #505050;
 }
 
 h2 {
@@ -171,8 +172,7 @@ nav li a:active {
 	width: 18%;
 	margin-bottom: 1.5em;
 	display: inline;
-  	padding: 1.25em; 
-  	border: 1px dashed red;
+  	padding: 1em; 
 }
 
 #main-info-left
@@ -215,7 +215,7 @@ nav li a:active {
 	margin-bottom: 1.5em;
 	margin-top: 1em;
 	display: inline;
-  	padding: ; 
+  	padding: 0px; 
 }
 
 
@@ -226,28 +226,25 @@ nav li a:active {
 	min-width: 200px;
 	margin-bottom: 1.5em;
 	display: inline;
-  	padding: 1.25em; 
+  	padding: 0px; 
   	font-size: 1.2em;
-  	border: 1px dashed red;
 }
 
 #aside-img-left
 {
-	
 	float: left;
 	width: 27%;
 	min-width: 200px;
 	margin-bottom: 1.5em;
 	display: inline;
-  	padding: 1.25em;
+  	padding: 0px;
   	font-size: 1.2em; 
-  	border: 1px dashed red;
 }
 
 .tone-box 
 {
 	background: #f3f3f3;
-	/*border-bottom: 3px solid  #c9c9c9;  */
+	border-bottom: 3px solid  #c9c9c9;
 }
 
 .lighter-box {
@@ -335,6 +332,7 @@ button {
 .fill-logo {
 	display: inline;
 	width: 200px;
+	border: 0px;
 }
 
 .fill-tagline 
@@ -416,6 +414,7 @@ button {
 {
 	display: block;
 	margin: auto;
+	border: 0px;
 }
 /*------------login styles---------------------------------*/
 
@@ -513,20 +512,12 @@ div.login input {
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
-.primary {
-	margin-left: 1em;
+.details {
+	border: 1px solid #505050; border-radius: 10px; padding: 1em; background-color: #f8f8f8; margin: 5px;
 }
 
 .secondary_info {
-/*styles moved to fill_client-public.js*/
-}
-
-.record .details {
-	border: 1px solid #505050; border-radius: 10px; padding: 1em;
-}
-
-.primary_info {
-	border: 1px solid #505050; border-radius: 10px; padding: 1em; background-color: red;
+	display: none; width: 100%; background-color: #f5f5f5; font-size: .8em; color: #505050;"
 }
 
 /*------------------------------------------------------*/
