--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -7,8 +7,8 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
 <!--  <link rel="stylesheet" href="/fILL-public.1.0.css"></link> -->
-  <link rel="stylesheet" href="/fILL-public-accessible.1.1.css"></link>
-  <link rel="stylesheet" href="/fILL-public-datatables.1.0.css"></link>
+  <link rel="stylesheet" href="/css/fILL-public-accessible.1.1.css"></link>
+  <link rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-public-1.8.js"></script>
