--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -512,7 +512,7 @@ div.login input {
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
-.primary {
+.primary_info {
 	margin: 1em;
 	background-color: #f5f5f5;
 }
