tidied up margin for button left

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -306,9 +306,8 @@ button {
 .button-left {
 	float: left;
 	clear: right;
-	margin-right: 1em;
 	font-size: 1.2em;
-	margin: .5em;
+	margin: 1em;
 	padding: .3em;
 }
 
