--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -318,9 +318,8 @@ button {
 
 .button-right {
 	float: right;
-	margin-left: 1em; 
     font-size: 1.2em;
-	margin: .5em;
+	margin: 1em;
 	padding: .3em;
 
 }
