--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -526,6 +526,10 @@ div.login input {
 	display: none; width: 100%; background-color: #f5f5f5; font-size: .8em; color: #505050;"
 }
 
+#pager {
+	color: #383;
+}
+
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
 #progress_empty {
