--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -84,7 +84,7 @@ $('document').ready(function(){
 
 <!-- from header.tmpl -->
 
-<!--<DIV id="header">
+<DIV id="header">
   <div id="logo">
     <img src="/img/fILL.png">
     <div id="logo_slogan">Manitoba Public Libraries ILL management system</div>
@@ -96,7 +96,7 @@ $('document').ready(function(){
       <input id="button" type="submit" value="Search"/>
       <input id="help" type="submit" value="?" onClick="javascript:searchHelp(this); return false;">
     </form>
-  </div>-->
+  </div>
 
   <div id="header_quick_access">
     <ul>
