--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -506,8 +506,13 @@ div.login input {
 }
 
 #divChangePass { 
-	border:1px solid #000000;
 	padding: .8em;
+  	width: 70%;
+  	margin: 1em;
+	background: #f3f3f3;
+	border: 2px solid #505050;
+	color: #505050;
+	padding: .5em;
 }
 /*-------SEARCH RESULTS STYLES-----------------*/
 
