padding top test

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -70,7 +70,7 @@ header
 
 input {
 	margin: 5px 0px 0px 0px;
-	width: ;
+	width: auto;
 	height: 2em;
 	font-size: 1em;
 }
@@ -309,6 +309,7 @@ button {
 	font-size: 1.2em;
 	margin: 1em;
 	padding: .3em;
+	padding-top: 20px;
 }
 
 .tone-box.button-left {
