--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -90,7 +90,7 @@
   <div id="search" role="search">
     <form id="searchForm" name="search">
       <input id="query" type="text" size="50px" placeholder="Search" value="<TMPL_VAR name='query'>">
-      <input id="button" type="submit" value="Go" class="">
+      <input id="button" type="submit" value="Go" class="fill-button">
     </form>
   </div>
 </div> <!-- search-container -->
