--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -24,11 +24,8 @@
         <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
 
         <h3>Privacy</h3>
-        <p>
-        	fILL does not keep any record of your searches or requests after your books are returned.  
-        	Logging in is necessary for your library to know who is making the request, but no information 
-        	linking your account to any searches or requests is kept after the ILL transaction is completed.
-        	Some non-identifying data may be retained for statistical purposes.
+        <p class="secondary_info">	
+        fILL does not keep any record of your searches or requests after your books are returned. Logging in is necessary for your library to know who is making the request, but no information linking your account to any searches or requests is kept after the ILL transaction is completed. Some non-identifying data may be retained for statistical purposes.
         </p>
   </div><!--main-info-right-->
 </div><!--container div-->
