--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -127,13 +127,13 @@
     <tr>
      <td valign="top">
 
-      <div id="AVnotice">
+      <!--<div id="AVnotice">
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
 	    
 	      <p>Note that, while items of all types (DVD, CD, etc) may be listed, individual libraries may not allow interlibrary loan of audiovisual matierial at this time.</p>
 
-      </div>
+      </div>-->
 
       <div id="ranking" style="clear:left; display:none">
        <form name="select">
