--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -126,7 +126,8 @@
    <table width="100%" border="0" cellpadding="6" cellspacing="0">
     <tr>
      <td valign="top">
-
+     <h2>Available At Your Local Library</h2>
+     <img src="/img/recent-books.png">
       <!--<div id="AVnotice">
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
