subtext in about

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -24,7 +24,7 @@
         <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
 
         <h3>Privacy</h3>
-        <p>
+        <p class="fill-subtext">
         	fILL does not keep any record of your searches or requests after your books are returned.  
         	Logging in is necessary for your library to know who is making the request, but no information 
         	linking your account to any searches or requests is kept after the ILL transaction is completed.
