--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -528,7 +528,10 @@ div.login input {
 
 .fill-subtext {
 	font-size: .8em;
-	color: #505050;
+	color: red;
+	background-color: #f5f5f5;
+	width: 90%;
+	text-align: center;
 }
 
 /*-------SEARCH RESULTS STYLES-----------------*/
