--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -528,10 +528,9 @@ div.login input {
 
 .fill-subtext {
 	font-size: .8em;
-	color: red;
+	color: #505050;
 	background-color: #f5f5f5;
 	width: 90%;
-	text-align: center;
 }
 
 /*-------SEARCH RESULTS STYLES-----------------*/
