--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -123,16 +123,17 @@
   </div>
  
   <div id="recordview">
-
+    <div id="AVnotice">
      <h2>Available At Your Local Library</h2>
      <img src="/img/recent-books.png">
-      <!--<div id="AVnotice">
+    </div>
+      <!--
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
 	    
 	      <p>Note that, while items of all types (DVD, CD, etc) may be listed, individual libraries may not allow interlibrary loan of audiovisual matierial at this time.</p>
 
-      </div>-->
+      -->
 
       <div id="ranking" style="clear:left; display:none">
        <form name="select">
