--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -540,7 +540,7 @@ div.login input {
 	margin: 1em;
 	background-color: #f5f5f5;
 	padding: .7em;
-	border-color: #fff;
+	border: 2px solid #fff;
 }
 
 .details {
