Revert "removed border bottom from img"
This reverts commit bb82c9c50b02b4eebf1affb39bed3b25610eaa58.

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -35,6 +35,7 @@ img
 {
 	height: auto;
 	max-width: 100%;
+	border-bottom: 3px solid #505050;
 }
 
 h2 {
@@ -215,7 +216,6 @@ nav li a:active {
 	margin-top: 1em;
 	display: inline;
   	padding: 0px; 
-  	border-bottom: 3px solid #505050;
 }
 
 
@@ -228,7 +228,6 @@ nav li a:active {
 	display: inline;
   	padding: 0px; 
   	font-size: 1.2em;
-  	border-bottom: 3px solid #505050;
 }
 
 #aside-img-left
@@ -324,6 +323,7 @@ button {
 	padding: .3em 1em;
 }
 
+}
 .tone-box.button-left {
 	float: left;
 	margin-right: 1em;
