lightning (search) now uses the same header.tmpl as everyone else on the library-side

--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -6,15 +6,8 @@
     <li><a href="?authen_logout=1">Log out</a></li>
   </ul>
 </div>
+<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
 </footer>
-	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="images/manitoba.gif">
-
-<div id="nav2">
-  <ul>
-    <li><a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a></li>
-    <li><a href="?authen_logout=1">Log out</a></li>
-  </ul>
-</div>
 
 </body>
 </html>
