--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -138,4 +138,4 @@ $('document').ready(function(){
 
   </div><!-- div id main -->
 </div><!-- div id container -->
-<TMPL_INCLUDE NAME="footer_public.tmpl">
+<TMPL_INCLUDE NAME="footer.tmpl">
