removed border from env disp

--- a/templates/environment/display.tmpl
+++ b/templates/environment/display.tmpl
@@ -2,7 +2,7 @@
 
 <div id="container">
 
-  <table class="fill-table" border=1>
+  <table class="fill-table">
     <tr>
       <td>ENV variable</td>
       <td>Value</td>
