--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -4,7 +4,16 @@
   
     <a href=/cgi-bin/lightning.cgi?rm=environment_form>ENV display</a>|<a href="?authen_logout=1">Log out</a>
 
-  <p><TMPL_VAR name="username"><TMPL_VAR name="lid"><TMPL_VAR name="library"></p>
+  <p>
+    <!-- The id="username" div is necessary: the username gets extracted (in 
+	 fILL_client-public-x.y.js), and passed to the code that allows the patron 
+	 to make an ILL request (we need to know who is making the request :-)
+	 It doesn't have to be *here*, but it has to be somewhere....
+      -->
+    <div id="username"><TMPL_VAR name="username"></div>
+    <TMPL_VAR name="lid">
+    <TMPL_VAR name="library">
+  </p>
 </div>
 </footer>
 	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
