fixed html error in about

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -11,7 +11,7 @@
 
   <div id="main-info-right" class="tone-box">
         <h3>About fILL, the Manitoba public libraries interlibrary-loan requesting system.</h3>
-        <p>fILL connects your local library to the millions of items available in Manitoba's libraries. If you were unable to find an item after searching your library’s catalogue you can use fILL to find it and have it delivered to your local public library.  
+        <p>fILL connects your local library to the millions of items available in Manitoba&rsquo;s libraries. If you were unable to find an item after searching your library’s catalogue you can use fILL to find it and have it delivered to your local public library.  
         </p>
         <p>
   	        fILL enables you to quickly and easily search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
