added id to env

--- a/templates/environment/display.tmpl
+++ b/templates/environment/display.tmpl
@@ -43,7 +43,7 @@
 <!--dev test-->
 <div id="container">
 
-  <table class="fill-table">
+  <table id="fill-table">
     <tr>
       <td>ENV variable</td>
       <td>Value</td>
