--- a/templates/environment/display.tmpl
+++ b/templates/environment/display.tmpl
@@ -2,9 +2,9 @@
 <style type="text/css">
 
 #fill-table {
-    border-collapse: collapse;
-    width: 70%;
-    margin: 1em;
+  border-collapse: collapse;
+  width: 80%;
+  margin: auto;
   background: #f3f3f3;
   border: 2px solid #505050;
   color: #505050;
