updated fill faq img link

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -48,7 +48,7 @@
 </div><!--main-info-left-->
 
 	<div id="aside-img-right">
-      <img src='/img/faq.jpg' alt="Well dressed brown haired girl leaning against wall reading a book"/>
+      <img src='/img/fill-faq.jpg' alt="Well dressed brown haired girl leaning against wall reading a book"/>
       <p class="short_instruction"></p>
 	</div>
 
