search img link updates

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -128,7 +128,7 @@
   <div id="recordview">
     <div id="AVnotice">
      <h2>Available At Your Local Library</h2>
-     <img src="/img/recent-books.png">
+     <img src="/img/fill-search.png" alt="library books">
     </div>
       <!--
 
