search page image updates

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -43,7 +43,7 @@
 
 <script type="text/javascript">
   $('document').ready(function(){
-    $("#image").append("<img src=/img/welcome-library.JPG>");
+    $("#image").append("<img src=/img/fill-search.JPG>");
 
     $("#query").focus();
   });
@@ -128,8 +128,7 @@
   <div id="recordview">
     <div id="AVnotice">
      <h2>Available At Your Local Library</h2>
-     <img src="/img/fill-search.png" alt="library books">
-    </div>
+      <img src="/img/recent-books.png" alt="library books">    </div>
       <!--
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
