--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -6,7 +6,7 @@
 <div id="container">
 
   <div id="aside-img-left">
-        <img src='/img/fill-help.png' alt="Middle adged man selecting a book of the shelf in a library"/>
+        <img src='/img/fill-help.jpg' alt="Middle adged man selecting a book of the shelf in a library"/>
   </div>
 
   <div id="main-info-right" class="tone-box">
