search page image cleanup

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -128,7 +128,7 @@
   <div id="recordview">
     <div id="AVnotice">
      <h2>Available At Your Local Library</h2>
-      <img src="/img/recent-books.png" alt="library books">    </div>
+      <img src="/img/recent-books.jpg" alt="library books">    </div>
       <!--
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
