fill search image typo

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -43,7 +43,7 @@
 
 <script type="text/javascript">
   $('document').ready(function(){
-    $("#image").append("<img src=/img/fill-search.JPG>");
+    $("#image").append("<img src=/img/fill-search.jpg>");
 
     $("#query").focus();
   });
