--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -128,7 +128,14 @@
   <div id="recordview">
     <div id="AVnotice">
      <h2>Available At Your Local Library</h2>
-      <img src="/img/recent-books.jpg" alt="library books">    </div>
+
+        <img src="/img/covers/MB-Hilary_Mantel.png" alt="book covers" class="covers">
+        <img src="/img/covers/MB-Jeet_Thayil.png" alt="book covers" class="covers">
+        <img src="/img/covers/MB-NedBeauman.png" alt="book covers" class="covers">
+        <img src="/img/covers/MB-RachelJoyce.png" alt="book covers" class="covers">
+        <img src="/img/covers/MB-Will_Self.png" alt="book covers" class="covers">
+
+      </div>
       <!--
 
 	      <img src="/img/Blue exclamation mark.png" alt="exclamation icon" style="float:left; vertical-align:middle; border:0px"/>
