search display updates

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -127,7 +127,7 @@
  
   <div id="recordview">
     <div id="AVnotice">
-     <h2>Available At Your Local Library</h2>
+     <h2>Available At Your Local Library</h2><br>
 
         <img src="/img/covers/MB-Hilary_Mantel.png" alt="book covers" class="covers">
         <img src="/img/covers/MB-Jeet_Thayil.png" alt="book covers" class="covers">
