--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -129,11 +129,11 @@
     <div id="AVnotice">
      <h2>Available At Your Local Library</h2><br>
 
-        <img src="/img/covers/MB-Hilary_Mantel.png" alt="book covers" class="covers">
-        <img src="/img/covers/MB-Jeet_Thayil.png" alt="book covers" class="covers">
-        <img src="/img/covers/MB-NedBeauman.png" alt="book covers" class="covers">
-        <img src="/img/covers/MB-RachelJoyce.png" alt="book covers" class="covers">
-        <img src="/img/covers/MB-Will_Self.png" alt="book covers" class="covers">
+        <a href="/"><img src="/img/covers/MB-Hilary_Mantel.png" alt="book covers" class="covers"></a>
+        <a href="/"><img src="/img/covers/MB-Jeet_Thayil.png" alt="book covers" class="covers"></a>
+        <a href="/"><img src="/img/covers/MB-NedBeauman.png" alt="book covers" class="covers"></a>
+        <a href="/"><img src="/img/covers/MB-RachelJoyce.png" alt="book covers" class="covers"></a>
+        <a href="/"><img src="/img/covers/MB-Will_Self.png" alt="book covers" class="covers"></a>
 
       </div>
       <!--
