image care of p added

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -7,6 +7,8 @@
 
   <div id="aside-img-left">
         <img src='/img/fill-help.jpg' alt="Middle adged man selecting a book of the shelf in a library"/>
+            <p class="note">Image care of </p>
+
   </div>
 
   <div id="main-info-right" class="tone-box">
