--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -49,7 +49,8 @@
 
 	<div id="aside-img-right">
       <img src='/img/fill-faq.jpg' alt="Well dressed brown haired girl leaning against wall reading a book"/>
-      <p class="short_instruction"></p>
+      <p class="note">Image care of </p>
+
 	</div>
 
 </div><!--div id container -->
