--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -74,7 +74,8 @@ $('document').ready(function(){
 
 <div id="container">
   <div id="aside-img-left">
-    <img src="/img/fill-registration.jpg" alt="A fit man in white polo shirt standing on subway platform looking at a tablet with red headphones in">
+    <img src="/img/fill-registration.jpg" alt="man sitting in a chair relaxing and reading a book">
+    <p class="note">Image care of </p>
   </div>
 
   <div id="main-info-right" class="tone-box">
