--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -428,6 +428,15 @@ button {
 	border: 0px;
 }
 
+.note {
+	font-size: .5em;
+	color: #505050
+}
+
+.note a {
+	font-style: inherit;
+}
+
 /*------------login styles---------------------------------*/
 
 .login {
