test of note class, text under image

--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -6,8 +6,8 @@
 <div id="container">
 
   <div id="aside-img-left">
-        <img src='/img/fill-help.jpg' alt="Middle adged man selecting a book of the shelf in a library"/>
-            <p class="note">Image care of </p>
+        <img src='/img/fill-help.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
+            <p class="note">Image care of <a class="note" href="https://www.flickr.com/photos/swanksalot/">Seth Anderson</p>
 
   </div>
 
