closed a href , lightened note colour

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -430,7 +430,7 @@ button {
 
 .note {
 	font-size: .5em;
-	color: #505050
+	color: #c0c0c0;
 }
 
 /*------------login styles---------------------------------*/
