--- a/templates/public/about.tmpl
+++ b/templates/public/about.tmpl
@@ -7,7 +7,7 @@
 
   <div id="aside-img-left">
         <img src='/img/fill-help.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
-            <p class="note">Image care of <a class="note" href="https://www.flickr.com/photos/swanksalot/">Seth Anderson</p>
+            <p class="note">Image care of <a href="https://www.flickr.com/photos/swanksalot/">Seth Anderson</a></p>
 
   </div>
 
