--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -75,7 +75,7 @@ $('document').ready(function(){
 <div id="container">
   <div id="aside-img-left">
     <img src="/img/fill-registration.jpg" alt="man sitting in a chair relaxing and reading a book">
-    <p class="note">Image care of </p>
+    <p class="note">Image care of <a href="https://www.flickr.com/photos/alancleaver/">Alan Cleaver</a></p>
   </div>
 
   <div id="main-info-right" class="tone-box">
