added faq image note

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -48,8 +48,8 @@
 </div><!--main-info-left-->
 
 	<div id="aside-img-right">
-      <img src='/img/fill-faq.jpg' alt="Well dressed brown haired girl leaning against wall reading a book"/>
-      <p class="note">Image care of </p>
+      <img src='/img/fill-faq.jpg' alt="Child sitting on a the floor of a book store, engrossed in reading"/>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/qwrrty/">Tim Pierce</a></p>
 
 	</div>
 
