--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -19,7 +19,8 @@
 	</div>
 
 	<div id="aside-img-right">
-		<img src='/img/logos/WPL-Card.png' alt="picture of a library card catalogue"/>
+		<img src="/img/fill-contact.jpg" alt="Three children sitting on a couch in the library reading books"/>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/">the San José Library</a></p>
 	</div>
 
 </div>
