--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -49,7 +49,7 @@
 
 	<div id="aside-img-right">
       <img src='/img/fill-faq.jpg' alt="Child sitting on a the floor of a book store, engrossed in reading"/>
-      <p class="note">Image care of <a href="https://www.flickr.com/photos/qwrrty/">Tim Pierce</a></p>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
 
 	</div>
 
