updates to covers css

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -268,8 +268,8 @@ nav li a:active {
 }
 
 .covers {
-	height: 225;
-	width: 170;
+	height: 225px;
+	width: 170px;
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
 	margin: 1em .5em 0em .5em;
