--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -130,7 +130,7 @@
      <h2>Available At Your Local Library</h2><br>
 
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/1.Jim Crace-Harvest.jpg"></a>
-        <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/7.Colm Tóibín-The Testament of Mary.jpg"></a>
+        <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/7.Colm Toibin-The Testament of Mary.jpg"></a>
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/27.Ruth Ozeki-A Tale For The Time Being.jpg"></a>
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/68.Noviolet-Bulawayo-We-Need-New-Names.jpg"></a>
         <a href="/"><img class="covers" alt="Man Booker shortlist 2013 book cover" title="" src="/img/covers/73.Eleanor Catton-The Luminaries.jpg"></a>
