--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -268,15 +268,15 @@ nav li a:active {
 }
 
 .covers {
-	height: 215px;
-	width: 170px;
+	height: 225px;
+	width: 155px;
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
 	margin: 1em .4em 0em .4em;
 }
 
 .covers:hover {
-	border: 3px solid #c0c0c0;
+	border: 3px dashed #c0c0c0;
 }
 
 footer
