--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -272,11 +272,11 @@ nav li a:active {
 	width: 155px;
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
-	margin: 1em .4em 0em .4em;
+	margin: 3px 6px;
 }
 
 .covers:hover {
-	border: 3px dashed #c0c0c0;
+	border: 0px 0px 3px 3px solid #c0c0c0;
 }
 
 footer
