covers class tweaks

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -272,7 +272,7 @@ nav li a:active {
 	width: 155px;
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
-	margin: 3px 6px;
+	margin: 3px;
 }
 
 .covers:hover {
