--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -268,15 +268,15 @@ nav li a:active {
 }
 
 .covers {
-	height: 225px;
-	width: 155px;
+	height: 220px;
+	width: 150px;
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
 	margin: 3px;
 }
 
 .covers:hover {
-	border: 0px 0px 3px 3px solid #c0c0c0;
+	border-bottom: 3px; border-left: 3px; border: solid #c0c0c0;
 }
 
 footer
