--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -276,7 +276,8 @@ nav li a:active {
 }
 
 .covers:hover {
-	border-bottom: 3px; border-left: 3px; border: solid #c0c0c0;
+	border-bottom: 3px solid #c0c0c0; 
+	border-left: 3px solid #c0c0c0;
 }
 
 footer
