--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -20,7 +20,7 @@
 
 	<div id="aside-img-right">
 		<img src="/img/fill-contact.jpg" alt="Three children sitting on a couch in the library reading books"/>
-      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San José Library</a></p>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
 	</div>
 
 </div>
