--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -19,8 +19,9 @@
 	</div>
 
 	<div id="aside-img-right">
-		<img src="/img/fill-contact.jpg" alt="Three children sitting on a couch in the library reading books"/>
-      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
+		<img src="/img/fill-contact.jpg" alt="Child sitting on a the floor of a book store, engrossed in reading">
+		      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
+
 	</div>
 
 </div>
