--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -19,7 +19,7 @@
 </ul>
 <hr><br>
 
-<div class="lighter-box"
+<div class="lighter-box">
 <a name="q1"><h3>How long does it take to get something delivered?</h3></a>
 	<p>Wait times can vary.  Items already on loan can take longer to be delivered.  Typically, it takes between a week to  two weeks for an item to be delivered.  And some items may never be delivered because not all libraries participate in the inter-library loan program.</p>
 
@@ -48,9 +48,8 @@
 </div><!--main-info-left-->
 
 	<div id="aside-img-right">
-      <img src='/img/fill-faq.jpg' alt="Child sitting on a the floor of a book store, engrossed in reading"/>
-      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
-
+      <img src='/img/fill-faq.jpg' alt="Three children sitting on a couch in the library reading books"/>
+      <p class="note">Image care of <a href="https://www.flickr.com/photos/sanjoselibrary/2839834669/">the San Jose Library</a></p>
 	</div>
 
 </div><!--div id container -->
