--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -250,7 +250,7 @@ nav li a:active {
 .tone-box 
 {
 	background: #e3e3e3;
-	border-bottom: 3px solid  #c9c9c9;
+	border-bottom: 3px solid  #b3b3b3;
 }
 
 .lighter-box {
@@ -266,15 +266,7 @@ nav li a:active {
 	clear: right;
 	width: 50%;
 	height: auto;
-	margin-bottom: 1em;
-	margin-top: 1em;
-  	padding: 1.25em; 
-	border: 0px; 
-}
-
-.covers {
-	height: 220px;
-	width: 150px;
+	margin-bottom: 1em;ne
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
 	margin: 3px;
@@ -551,13 +543,14 @@ div.login input {
 .primary_info {
 	width: 100%;
 	margin: 1em;
-	background-color: #f5f5f5;
+	background-color: #e3e3e3;
 	padding: .7em;
 	border: 2px solid #fff;
 }
 
 .details {
-	border: 1px 0px solid #505050; 
+	border-top: 1px solid #505050; 
+	border-bottom: 1px solid #505050;
 	padding: 1em; 
 	background-color: #f3f3f3; 
 	margin: 5px;
