--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -272,6 +272,13 @@ nav li a:active {
 	margin: 3px;
 }
 
+.covers {
+	height: 225px;
+	width: 170px;
+	border: 3px solid #f3f3f3;
+	margin-top: 1em;
+	margin: 1em .5em 0em .5em;
+}
 .covers:hover {
 	border: 3px outset #c0c0c0; 
 
