--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -273,11 +273,11 @@ nav li a:active {
 }
 
 .covers {
-	height: 225px;
-	width: 170px;
+	height: 220px;
+	width: 150px;
 	border: 3px solid #f3f3f3;
 	margin-top: 1em;
-	margin: 1em .5em 0em .5em;
+	margin: 3px;
 }
 .covers:hover {
 	border: 3px outset #c0c0c0; 
