--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -434,7 +434,7 @@ button {
 
 .note {
 	font-size: .5em;
-	color: #c0c0c0;
+	color: #b3b3b3;
 }
 
 /*------------login styles---------------------------------*/
