--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -274,7 +274,7 @@ nav li a:active {
 .covers {
 	height: 220px;
 	width: 150px;
-	border: 3px solid #f3f3f3;
+	border: 3px solid #e3e3e3;
 	margin-top: 1em;
 	margin: 3px;
 }
