margin for welcome box

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -264,10 +264,9 @@ nav li a:active {
 	clear: right;
 	width: 50%;
 	height: auto;
-	margin-bottom: 1em;ne
+	margin: 1em;
 	border: 3px solid #f3f3f3;
-	margin-top: 1em;
-	margin: 3px;
+
 }
 
 .covers {
