border welcome box

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -265,8 +265,7 @@ nav li a:active {
 	width: 50%;
 	height: auto;
 	padding: 1em;
-	border: 3px solid #f3f3f3;
-	margin: 1em;
+	margin: 1em 0em;
 
 }
 
