--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -1,4 +1,7 @@
 <!-- End content -->
+
+<div id="footer-container">
+
 <footer role="contentinfo">
 <div id="nav2">
   
@@ -16,7 +19,7 @@
   </p>
 </div>
 </footer>
-	<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
 
-</body>
-</html>
+</div>
+
