--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -294,6 +294,10 @@ footer
 	margin-top: 1em;
 }
 
+#footer-container {
+	background-color: #fff;
+}
+
 #butlink {
 	padding: .5em;
 	border: 1px solid #000;
