added body tag to footer

--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -22,5 +22,5 @@
 <img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
 
 </div>
-
+</body>
 </html>
