--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/fILL-public-datatables.1.0.css"></link>
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
-  <script type="text/javascript" src="/js/fILL_client-public-1.8.js"></script>
+  <script type="text/javascript" src="/js/fILL_client-public-1.9.js"></script>
 
 <script type="text/javascript">
 
@@ -168,6 +168,7 @@
 
       <div id="pager"></div>
       <div id="navi"></div>
+      <p>Click on the title for more information, and to request.</p>
       <div id="results"></div>
   </div>
   
