--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -292,10 +292,11 @@ footer
 	padding: .5em;
 	font-size: .8em;
 	margin-top: 1em;
+
 }
 
 #footer-container {
-	background-color: #fff;
+	background-color: red;
 }
 
 #butlink {
