Revert "footer red dev"
This reverts commit ae3681c0c30d735c54a3dbdb6dfff5cf7c5fd439.

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -292,11 +292,10 @@ footer
 	padding: .5em;
 	font-size: .8em;
 	margin-top: 1em;
-
 }
 
 #footer-container {
-	background-color: red;
+	background-color: #fff;
 }
 
 #butlink {
