class added bison

--- a/templates/public/footer.tmpl
+++ b/templates/public/footer.tmpl
@@ -1,5 +1,7 @@
 <!-- End content -->
 
+
+
 <footer role="contentinfo">
 <div id="nav2">
   
@@ -17,7 +19,10 @@
   </p>
 </div>
 </footer>
-<img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+
+<div id="bison-container">
+  <img class="bison" alt="Manitoba Bison Logo" title="Service provided by the Government of Manitoba" src="/img/manitoba.gif">
+</div>
 
 </body>
 </html>
