--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -33,7 +33,7 @@ $('document').ready(function(){
           </div>
           <div class="login-footer">
             <p>Not a user?
-              <a href="?rm=registration_form">Sign up for an account!</a>
+              <button><a href="?rm=registration_form">Sign Up!</a></button>
             </p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
           </div>
