nav bar changes

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -111,6 +111,7 @@ nav li a
 	float: left;
 	padding: 5px 10px;
 	text-decoration: none;
+	text-transform: capitalize;
 }
 
 /* Navigation link states */
