--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -65,12 +65,12 @@
 <!--***************ARIA MARKER 'NAVIGATION'***************-->
 <nav role="navigation">
   <ul class="nav inline-items">
-    <li><a href="/cgi-bin/public.cgi?rm=search_form">home</a></li>
-    <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">my account</a></li>
-    <li><a href="/cgi-bin/public.cgi?rm=current_form">current borrowing</a></li>
-    <li><a href="/cgi-bin/public.cgi?rm=about_form">help</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">My account</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=current_form">Current borrowing</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=about_form">Help</a></li>
     <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
-    <li><a href="/cgi-bin/public.cgi?rm=contact_form">contact</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
   </ul>
 </nav>
 
