--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -66,8 +66,8 @@
 <nav role="navigation">
   <ul class="nav inline-items">
     <li><a href="/cgi-bin/public.cgi?rm=search_form">Home</a></li>
-    <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">My account</a></li>
-    <li><a href="/cgi-bin/public.cgi?rm=current_form">Current borrowing</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=myaccount_form">My Account</a></li>
+    <li><a href="/cgi-bin/public.cgi?rm=current_form">Current Borrowing</a></li>
     <li><a href="/cgi-bin/public.cgi?rm=about_form">Help</a></li>
     <li><a href="/cgi-bin/public.cgi?rm=faq_form">FAQ</a></li>
     <li><a href="/cgi-bin/public.cgi?rm=contact_form">Contact</a></li>
