--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -128,7 +128,7 @@ $('document').ready(function(){
         </table>
 
         <input id="home_library_town" type="hidden">
-        <input id="submitRegistration" type="submit" value="Submit" class="butlink">
+        <input id="submitRegistration" type="submit" value="Submit" class="button-left">
       </form>
     </div>
     <br/>
