contacts - remove redundant address line

--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -13,7 +13,7 @@
 			<p>Address:<br/>
 			<TMPL_VAR name="mailing_address_line1"><br/>
 			<TMPL_VAR name="mailing_address_line2"><br/>
-			<TMPL_VAR name="mailing_address_line3"><br/>
+<!--			<TMPL_VAR name="mailing_address_line3"><br/> -->
 			<TMPL_VAR name="city">, <TMPL_VAR name="province"> <TMPL_VAR name="post_code">
 		</p>
 	</div>
