--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -6,32 +6,18 @@
 <div id="container">
 
   <div id="aside-img-left">
-        <img src='/img/fill-help.jpg' alt="Brown haired girl with a pony tail, reading a book in the park"/>
-            <p class="note">Image care of <a href="https://www.flickr.com/photos/swanksalot/2715407049/">Seth Anderson</a></p>
-
-  </div>
+<span class="questionmarks">???</span>  </div>
 
   <div id="main-info-right" class="tone-box">
-        <h3>About fILL, the Manitoba public libraries interlibrary-loan requesting system.</h3>
-        <p>fILL connects your local library to the millions of items available in Manitoba&rsquo;s libraries. If you were unable to find an item after searching your library&rsquo;s catalogue you can use fILL to find it and have it delivered to your local public library.  
-        </p>
-        <p>
-  	        fILL enables you to quickly and easily search the catalogues of many Manitoba public libraries at once.  When you find an item that you'd like to request, it enables you to ask your home library to try to get it for you.
-        </p>
+        <h3>Help</h3>
         <p>The fILL help page is designed to help you to better search for the book you want.<br />
 
            Scroll down the page to locate the information you are looking for or 
         </p>
         <h3>Tutorial</h3>
-        <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">Download a quick tutorial about using fILL.</a></strong></p>
+        <p style="text-decoration:underline;"><strong><a href="/Patrons%20-%20Searching%20tutorial.pdf">View a quick tutorial about using fILL.</a></strong></p>
 
-        <h3>Privacy</h3>
-        <p class="fill-subtext">
-        	fILL does not keep any record of your searches or requests after your books are returned.  
-        	Logging in is necessary for your library to know who is making the request, but no information 
-        	linking your account to any searches or requests is kept after the ILL transaction is completed.
-        	Some non-identifying data may be retained for statistical purposes.
-        </p>
+       
   </div><!--main-info-right-->
 </div><!--container div-->
 
